fit java options for java 9+